<resources>
    <string name="app_name">Diaspora Connect</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="view_post_fragment">View Post</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>
    <string name="view_comments_fragment">View Comments</string>
    <string name="label_login_desc">Portal of Indonesian Diaspora to collaboration for better Indonesia!</string>
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_stories">stories</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_comment">comment</string>
    <string name="field_image_uri">image_uri</string>
    <string name="field_video_uri">video_uri</string>
    <string name="field_story_id">story_id</string>
    <string name="field_views">views</string>
    <string name="field_duration">duration</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_timestamp">timestamp</string>
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>
    <string name="calling_activity">calling_activity</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="intent_user">intent_user</string>
    <string name="user_stories">user_stories</string>
    <string name="user_account_settings">user_account_settings</string>
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="home_activity">Home Activity</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>
    <string name="string_share">Share</string>
    <string name="dialog_add_to_story">AddToStoryDialog</string>
    <string name="evp_submit">SUBMIT</string>
    <string name="evp_retry">RETRY</string>
    <string name="spring_header_behavior">tabian.com.instagramclonetest.springheader.SpringHeaderBehavior</string>
    <string name="dependent_view_behavior">tabian.com.instagramclonetest.DependentViewBehavior</string>
    <string name="simple_refresh_header_text_below_threshold">below fold</string>
    <string name="simple_refresh_header_text_above_threshold">above folder</string>
    <string name="simple_refresh_header_text_refreshing">refreshing...</string>
    <string name="bitmap">bitmap</string>
    <string name="image_load_error">image_load_error</string>
    <string name="media_type">media_type</string>
    <string name="duration">duration</string>
    <string name="encoded_bitmap">encoded_bitmap</string>
    <string name="width_scale_factor">width_scale_factor</string>
    <string name="height_scale_factor">height_scale_factor</string>
    <string name="video_uri">video_uri</string>
    <string name="surface_number">surface_number</string>
    <string name="rotations">rotations</string>
    <string name="resource_index">resource_index</string>
    <string name="media_index">media_index</string>
    <string name="media_source">media_source</string>
    <string name="mcam_defaultDuration">00:00</string>
    <string name="mcam_permissions_needed">Permissions Needed</string>
    <string name="mcam_video_perm_warning">Permission to access your microphone and camera is needed, the camera will now close.</string>
    <string name="mcam_retry">RETRY</string>
    <string name="mcam_use_video">USE VIDEO</string>
    <string name="mcam_use_stillshot">USE STILLSHOT</string>
    <string name="mcam_portrait">Portrait</string>
    <string name="mcam_portrait_warning">It\'s recommended that you record in landscape. Record in portrait?</string>
    <string name="mcam_yes">Yes</string>
    <string name="mcam_error">Error</string>
    <string name="mcam_video_capture_unsupported">Your device does not support video capture.</string>
    <string name="mcam_no_audio_access">You haven\'t given access to your microphone; no audio will be recorded.</string>
    <string name="mcam_file_size_limit_reached">You\'ve reached the maximum file size!</string>
    <string name="mcam_image_preview_error_title">Image preview error</string>
    <string name="mcam_image_preview_error_message">Could not decode bitmap</string>
    <string name="btn_ayomulai">Let Start!</string>
    <string name="btn_lanjut">Next</string>
    <string name="btn_kembali">Back</string>
    <string name="beranda">Dashboard</string>
    <string name="contact">Contact</string>
    <string name="chat">Messages</string>
    <string name="profile">Profile</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="tab_label_feed">Timeline</string>
    <string name="tab_label_jobs">Jobs</string>
    <string name="field_fullname">Fullname</string>
    <string name="ed_profile_namalengkap">Fullname</string>
    <string name="ed_profile_headline">Headline</string>
    <string name="ed_profile_education">Education</string>
    <string name="ed_profile_summary">Summary</string>
    <string name="ed_profile_website">Website</string>
    <string name="notif_connected">Connected</string>
    <string name="notif_connecting">Connecting</string>
    <string name="notif_missed_call_title">Missed call</string>
    <string name="imsg_menu_myprofile">My Profile</string>
    <string name="imsg_menu_invitation">Invitation</string>
    <string name="imsg_menu_setting">Setting</string>
    <string name="imsg_menu_about">About</string>
    <string name="imsg_menu_logout">Logout</string>
    <string name="chat_profile">Contact information</string>
    <string name="chat_group_profile">Group information</string>
    <string name="chat_voice_call">Voice call</string>
    <string name="chat_video_call">Video call</string>
    <string name="chat_clear">Clear conversation</string>
    <string name="chat_background">Change background</string>
    <string name="chat_background_reset">Reset background</string>
    <string name="select_picture">Select picture</string>
    <string name="file_received">File received</string>
    <string name="image_received">Image received</string>
    <string name="voice_received">Voice received</string>
    <string name="video_received">Video received</string>
    <string name="answered_call">Answered call</string>
    <string name="missed_call">Missed call</string>
    <string name="bottom_nav_chat">Chats</string>
    <string name="bottom_nav_feeds">Feeds</string>
    <string name="bottom_nav_bubbles">Group</string>
    <string name="bottom_nav_contacts">Contacts</string>
    <string name="bottom_nav_event">Log</string>
    <string name="just_now">just now</string>
    <string name="yesterday">yesterday</string>
    <string name="default_string_photo" translatable="false">\?</string>
    <string name="toolbar_search">Search</string>
    <string name="create_bubble">Create new group</string>
    <string name="confirmation">Confirmation</string>
    <string name="accept_video_call">Accept video call</string>
    <string name="outgoing_call">Calling</string>
    <string name="incoming_call">Incoming call</string>
    <string name="confirm_delete_bubble">Do you really to delete this group?</string>
    <string name="confirm_delete_user">Do you really to delete this user?</string>
    <string name="confirm_leave_group">Do you really to leave this group?</string>
    <string name="confirm_delete_conversation">Do you really to clear this conversation?</string>
    <string name="toast_bubble_name">Please input group\'s name</string>
    <string name="toast_bubble_subject">Please input groups\'s subject</string>
    <string name="toast_bubble_member">You must select one member minimum</string>
    <string name="toast_broadcast_contact">You must select one contact minimum</string>
    <string name="toast_bubble_created">Group has been created</string>
    <string name="toast_bubble_failed">Create group failed</string>
    <string name="members">members</string>
    <string name="created_on">Created on</string>
    <string name="created_by">by</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_chat" translatable="false"></string>
    <string name="title_activity_contact_detail" translatable="false">ContactDetailActivity</string>
    <string name="title_activity_room_detail" translatable="false">ContactDetailActivity</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="title_activity_voice_call" translatable="false">VoiceCallActivity</string>
    <string name="chatHint">Enter message here...</string>
    <string name="loading_text">loading...</string>
    <string name="title_activity_invitation">Invitation</string>
    <string name="rcv_invitation">Invitation Received</string>
    <string name="sent_invitation">Invitation Sent</string>
    <string name="title_activity_room_create">New Group</string>
    <string name="create_bubble_name">Group name</string>
    <string name="create_bubble_subject">Group subject</string>
    <string name="create">Create</string>
    <string name="select_members">Select members</string>
    <string name="no_member">Currently no member</string>
    <string name="delete_bubble">Delete Group</string>
    <string name="title_activity_comment">Comment</string>
    <string name="invite_members">Invite members</string>
    <string name="pending">Invitation sent</string>
    <string name="preview_background">Preview</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title_activity_broadcast">Broadcast</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_about">About App</string>
</resources>