<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_music"
        android:checked="true"
        android:icon="@drawable/home_outline"
        android:title="@string/beranda" />

    <item
        android:id="@+id/i_contact"
        android:icon="@drawable/feature_search_outline"
        android:title="@string/contact" />

    <!--must set the item title to empty-->
    <item
        android:id="@+id/i_empty"
        android:title="" />

    <item
        android:id="@+id/i_chat"
        android:icon="@drawable/comment_text_outline"
        android:title="@string/chat" />

    <item
        android:id="@+id/i_favor"
        android:icon="@drawable/account_outline"
        android:title="@string/profile" />
</menu>